--- a/src/app/pages/self/apply/coff/coff.html
+++ b/src/app/pages/self/apply/coff/coff.html
@@ -11,19 +11,19 @@
         <div class="panel-body " style="padding:5px " ng-scrollbars ng-scrollbars-config="config ">
             <div class="row">
                 <div class="form-group col-md-4 ">
-                    <label for="inputPassword3 ">{{page.pageinfo.fields.EmpId.text}}</label>
-                    <field-box page="page" ng-column="page.pageinfo.fields.EmpId " ng-entity="entity " fb-change="attDateChange()" form="editForm "></field-box>
-                </div>
-                <div class="form-group col-md-4 ">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.COAppDate.text}}</label>
                     <field-box page="page" ng-column="page.pageinfo.fields.COAppDate " ng-entity="entity " form="editForm "></field-box>
+                </div>
+                <div class="form-group col-md-4 ">
+                    <label for="inputPassword3 ">{{page.pageinfo.fields.COAttnDate.text}}</label>
+                    <field-box page="page" ng-column="page.pageinfo.fields.COAttnDate " fb-change="attDateChange()" ng-entity="entity " form="editForm "></field-box>
                 </div>
             </div>
 
             <div class="row">
                 <div class="form-group col-md-4 ">
-                    <label for="inputPassword3 ">{{page.pageinfo.fields.COAttnDate.text}}</label>
-                    <field-box page="page" ng-column="page.pageinfo.fields.COAttnDate " fb-change="attDateChange()" ng-entity="entity " form="editForm "></field-box>
+                    <label for="inputPassword3 ">{{page.pageinfo.fields.EmpId.text}}</label>
+                    <field-box page="page" ng-column="page.pageinfo.fields.EmpId " ng-entity="entity " fb-change="attDateChange()" form="editForm "></field-box>
                 </div>
                 <div class="col-md-4" ng-show="showInOutTime">
                     <div class="form-group">
@@ -61,11 +61,11 @@
             <div class="row" ng-show="showInOutTime">
                 <div class="form-group col-md-8">
                     <label class="radio-inline custom-radio nowrap font-bold">
-                        <input type="radio" name="compoffconversion" value="true"  ng-model="entity.COIsApplyHalfDay">
+                        <input type="radio" name="compoffconversion" value="true" ng-model="entity.COIsApplyHalfDay">
                         <span>{{page.pageinfo.fields.COIsApplyHalfDay.place}}</span>
                     </label>
                     <label class="radio-inline custom-radio nowrap font-bold">
-                        <input type="radio" name="compoffconversion" value="true"  ng-model="entity.COIsApplyFullDay">
+                        <input type="radio" name="compoffconversion" value="true" ng-model="entity.COIsApplyFullDay">
                         <span>{{page.pageinfo.fields.COIsApplyFullDay.place}}</span>
                     </label>
                 </div>
@@ -202,22 +202,24 @@
                                         <div class="col-md-12">
                                             <div class="form-group">
                                                 <label class="radio-inline custom-radio nowrap font-bold">
-                                                     <input type="radio" name="compoffconversion" value="true"  ng-model="entity.ACODIsApplyHalfDay">
-                                                     <span>{{page.pageinfo.fields.COIsApplyHalfDay.place}}</span>
+                                                    <input type="radio" name="compoffconversion" value="true" ng-model="entity.ACODIsApplyHalfDay">
+                                                    <span>{{page.pageinfo.fields.COIsApplyHalfDay.place}}</span>
                                                 </label>
                                                 <label class="radio-inline custom-radio nowrap font-bold">
-                                                       <input type="radio" name="compoffconversion" value="true"  ng-model="entity.ACODIsApplyFullDay">
-                                                       <span>{{page.pageinfo.fields.COIsApplyFullDay.place}}</span>
+                                                    <input type="radio" name="compoffconversion" value="true" ng-model="entity.ACODIsApplyFullDay">
+                                                    <span>{{page.pageinfo.fields.COIsApplyFullDay.place}}</span>
                                                 </label>
                                             </div>
                                         </div>
-                                        
+
                                     </div>
 
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Status<span style="color:red">*</span></label>
+                                                <label>Status
+                                                    <span style="color:red">*</span>
+                                                </label>
                                                 <!--<select class="form-control" ng-model="entity.StatusId" ng-options="status.value as status.name for status in sanctionPage.pageinfo.statuslist"></select>-->
                                                 <select class="form-control" ng-model="sanctionEntity.StatusId" ng-options="status.value as status.name for status in sanctionPage.pageinfo.statuslist"></select>
 
@@ -225,7 +227,8 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Comment<span style="color:red">* </label>
+                                                <label>Comment
+                                                    <span style="color:red">* </label>
                                                 <textarea class="form-control" ng-model="sanctionEntity.ACODReson"></textarea>
                                             </div>
                                         </div>
@@ -321,7 +324,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Status<span style="color:red">*</label>
+                                <label>Status
+                                    <span style="color:red">*</label>
                                 <select class="form-control" ng-model="cancelRequestEntity.StatusId" ng-options="status.value as status.name for status in cancelRequestPage.pageinfo.statuslist"></select>
                             </div>
                         </div>
@@ -329,7 +333,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Comment <span style="color:red">* </label>
+                                <label>Comment
+                                    <span style="color:red">* </label>
                                 <textarea class="form-control" ng-model="cancelRequestEntity.COCDReson"></textarea>
                             </div>
                         </div>
@@ -437,7 +442,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Comment<span style="color:red">* </label>
+                                <label>Comment
+                                    <span style="color:red">* </label>
                                 <textarea class="form-control" ng-model="cancelRequestEntity.COCDReson"></textarea>
                             </div>
                         </div>
