--- a/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
+++ b/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
@@ -163,6 +163,12 @@
                     <div class="col-md-2">
                         <div class="row" ng-show="apply">
                             <div class="form-group col-md-12">
+                                <button class="btn btn-info btn-add pull-left" ng-click="applyWorkFromHome()">Work-Home</button>
+                            </div>
+                        </div>
+
+                        <div class="row" ng-show="apply">
+                            <div class="form-group col-md-12">
                                 <button class="btn btn-info btn-add pull-left" ng-click="applyAttendance()">Attendance</button>
                             </div>
                         </div>
