--- a/src/app/pages/team/attendance/adjustment/pending/pending.html
+++ b/src/app/pages/team/attendance/adjustment/pending/pending.html
@@ -245,7 +245,7 @@
                 </div>
 
             </div>
-            <div data-ng-if="noDataFound" class="alert alert-success" role="alert">Hooray, No pending adusment application requests for approval!</div>
+            <div data-ng-if="noDataFound" class="alert alert-success" role="alert">Hooray, No pending adustment application requests for approval!</div>
 
 
         </div>
