--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -1801,3 +1801,11 @@ p {
 
 /* active buttons */
 #status-buttons a.active span   { background:#00BC8C; }
+
+.panel-height {
+  height: 1000px; 
+}
+
+.gridsetheight {
+  width: 600px;
+}
